# selfie_roborace

src/mpc/: CMakeLists.txt  README.md  change_y_sign.py  mapChanged.pkl  mapOld.pkl  package.xml
src/mpc/include/: cppad_spline.hpp  spline.h
src/mpc/launch/: 2135loncz.launch  race-sim-mpc.launch  selfie-mpc.launch  spline-mpc-19-23.launch  spline-mpc.launch
src/mpc/src/: cppad_test.cpp  mpc.cpp  mpc.h  mpc_node.cpp
src/offset_calculator/: CMakeLists.txt  README.md  package.xml
src/offset_calculator/src/: offset_calculator.cpp  test_path_publisher.cpp  test_transform_broadcast.cpp
src/offset_combiner/: CMakeLists.txt  package.xml
src/offset_combiner/scripts/: offset_combiner.py
src/path_extractor/: CMakeLists.txt  README.md  package.xml
src/path_extractor/launch/: simple_path_test.launch
src/path_extractor/scripts/: path_extractor.py  test_path_creator.py  test_position_publisher.py
src/path_server/: CMakeLists.txt  package.xml
src/path_server/scripts/: path_saver  path_server
src/selfie_control/: CMakeLists.txt  package.xml
src/selfie_control/cfg/: Control.cfg
src/selfie_control/scripts/: cmd_converter.py  const_float64.py  pid_tuner.py
src/selfie_launch/: CMakeLists.txt  package.xml
src/selfie_launch/launch/: mapping.launch  multimaster.launch  race-sim-mpc.launch  race-sim.launch  selfie-base.launch  (+2 more)
src/selfie_mapping/: CMakeLists.txt  README.md  package.xml
src/selfie_steering_sim/: CMakeLists.txt  README.md  package.xml
src/selfie_stm32_bridge/: CMakeLists.txt
src/speed_controller/: CMakeLists.txt  README.md  package.xml
(+14 files in other folders)
