<?xml version="1.0"?>
<package format="2">
  <name>path_server</name>
  <version>0.0.0</version>
  <description>The path_server package</description>

  <maintainer email="gotlib.adam@gmail.com">Adam Gotlib</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
